# operation_app

./: Cargo.toml  notes.txt
src/: main.rs  test.rs
src/action/: mod.rs
src/application/: field.rs  forms.rs  global.rs  mod.rs
src/application/action_log/: mod.rs
src/application/authenticate/: mod.rs
src/application/component/: format.rs  mod.rs
src/application/data/dispatch/: local.rs  mod.rs  server.rs
src/application/menu/: mod.rs
src/application/menu/selected/: mod.rs
src/application/operation/: mod.rs
src/application/operation/menu/: mod.rs  preoperative.rs
src/application/operation/menu/intraoperative/: action.rs  mod.rs
src/application/operation/menu/preoperative/: action.rs  mod.rs
src/application/server_notification/: mod.rs
src/application/states/: mod.rs  preoperative.rs
src/application/states/intraoperative/menu/: mod.rs
src/application/states/preoperative/menu/: mod.rs
src/application/states/preoperative/menu/action/: area.rs  mod.rs  options.rs
src/cipher/: mod.rs
src/component/design/: mod.rs
src/components/: admin_data.rs  login.rs  mod.rs  operation.rs  operation_select.rs
src/database/: mod.rs
src/database/table/: builder.rs  data.rs  mod.rs  private.rs  public.rs  tree.rs  ui_builder.rs  window.rs
src/database/table/QUERY_REF/: sql.sql
src/database/table/join/: mod.rs  query.rs  structure.rs
src/database/table/join/query/: mod.rs
src/models/: error.rs  exchange_format.rs  mod.rs  operation.rs
src/sender/: mod.rs
src/services/: app.rs  middleman.rs  mod.rs  server.rs
src/table/: mod.rs  query_return.rs  update.rs
src/table/query/: mod.rs  preoperative.txt
src/temporary/: mod.rs
src/views/: login.rs  mod.rs  operation_select.rs
src/widget/: login.rs  mod.rs  patient.rs
src/widget/operation/: mod.rs  operation_select.rs
src/window/: mod.rs
src/ws/: mod.rs  receive.rs  types.rs
src/ws/process/: mod.rs
