[package]
name = "operation_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     
    "default_fonts", 
    "glow",          
    "persistence",   
]}
egui = "0.28.1"
futures = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
url = "2.5.2"

serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ewebsock = "0.6.0"
egui_extras = "0.28.1"
chrono = "0.4.38"

aes-gcm = "0.10.3"
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
hex = "0.4.3"
